# python-project-52

./: .coverage  .env  .gitignore  Makefile  README.md  build.sh  db.sqlite3  logfile  pyproject.toml  render.yml  setup.cfg
locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/label/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_name.py  0003_alter_label_options.py
task_manager/status/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_alter_status_table.py  0003_alter_status_name.py  0004_alter_status_options_alter_status_name.py  0005_alter_status_options.py
task_manager/task/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_alter_task_table.py  0002_alter_tasklabels_labels_alter_tasklabels_task.py  0003_alter_task_description_alter_task_executor_and_more.py  0004_alter_task_description.py  0005_alter_task_description.py  0006_remove_task_label_task_labels_alter_task_author_and_more.py  0007_remove_task_labels_task_labels.py  0008_alter_task_labels.py  0009_alter_task_options_alter_task_author_and_more.py  0010_remove_task_labels_task_label.py  0011_remove_task_label_task_labels.py
task_manager/templates/: base.html  base_form.html  index.html  login.html
task_manager/user/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+28 files in other folders)
