[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"
uvicorn = "^0.30.6"
django-bootstrap5 = "^24.2"
django-extensions = "^3.2.3"
coverage = "^7.6.1"
django-filter = "^24.3"
python-dotenv = "^1.0.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
